# process_metrics_platform_v2

./: .coveragerc  .dockerignore  .env.example  .env.prod.example  .env.production.example  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  CLAUDE.md  CLEAN_JIRA_SCHEMA_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Caddyfile.example  DAGSTER_TESTING.md  Dockerfile  Dockerfile.dagster  Dockerfile.streamlit  FUTURE_METRICS_ROADMAP.md  GENERIC_LONG_METRIC_STORE_VISION.md  LICENSE  MANUAL_SETUP.md  METABASE_DASHBOARD.md  METADATA_STRATEGY.md  METRICS_AS_IS_TO_BE.md  METRICS_EXPANSION.md  METRICS_REFACTORING_GUIDE.md  METRICS_REVISION.md  METRICS_SCHEMA_DOCUMENTATION.md  METRICS_VISION.md  Makefile  Makefile.bak  PLAN_JIRA_ETL_EXPANSION.md  README.dev.md  README.feature.md  README.md  REFACTOR_METRICS_TO_PYTHON.md  ROADMAP.md  SECURITY.md  (+31 more)
.claude/: settings.json
.serena/: project.yml
app/: __init__.py  database.py  main.py
bi/: README.md  __init__.py  main.py  provider_base.py  registry.py  verify_metabase_pack.py
config/: __init__.py  projects.example.yaml  schema.py
db/: 00_bootstrap.sql
dlt_jira_loader/: __init__.py
docs/: ARCHITECTURE_AUDIT.md  AUDIT_ACTION_ITEMS.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  NEW_METRICS.md  README_AUDIT.md  SIMPLE_DEPLOY_GUIDE.md
pipelines/: __init__.py  definitions.py  partitions.py
plans/: plan_admin_delete_tests_docker_20260326.md  plan_admin_security_fixes_20260326.md  plan_alembic_migrations_20260324.md  plan_cfd_regression_tests_20260322.md  plan_code_review_fixes_20260320.md  plan_code_review_fixes_20260321.md  plan_diagnostics_slicing_20260319.md  plan_etl_audit_fixes_20260325.md  plan_fix_aging_datetime_tz_20260319.md  plan_fix_lint_20260319.md  plan_fix_slice_value_20260319.md  plan_generic_long_metric_store_20260319.md  plan_jira_pipeline_audit_remediation_20260323.md  plan_lead_time_tests_and_cycle_alignment_20260322.md  plan_lint_and_commit_20260321.md  plan_metrics_expansion_21_new_20260321.md  plan_opensource_prep_20260327.md  plan_phase5_indexes_sprint_changelog_20260323.md  plan_register_new_metric_jobs_20260321.md  plan_test_fixes_20260325.md  plan_ttm_rewrite_as_lead_time_filtered_20260322.md  plan_units_tab_fixes_20260326.md  plan_units_tab_ux_clarity_20260326.md  plan_velocity_estimation_unit_binding_20260326.md  velocity_jira_alignment_plan.md
scripts/: add_missing_schema_comments.py  analyze_commitment.py  analyze_sprint37.py  analyze_twmob_velocity.py  apply_flow_status_settings.sql  backup_postgres.sh  bootstrap_admin_user.py  check_alembic_heads.py  check_db_schema.py  check_final_data.py  check_missing_s37.py  check_repo_policy.py  check_results.py  check_schema_for_slicer.py  check_sprint37_cl.py  check_suspicious_velocity.py  check_tables.py  compare_commitment_approaches.py  compare_sprints_velocity_with_db.py  debug_plan_discrepancy.py  debug_sp_discrepancy.py  debug_sprint36.py  debug_sprint36_completed.py  debug_twad_416_status.py  debug_twmob_velocity.py  debug_velocity_logic_interactive.py  debug_velocity_steps.py  dedupe_schema_comments.py  deploy.sh  diagnose_slicing.py  dump_clean_jira_schema.py  dump_metrics.py  extract_selected_columns.py  fix_slice_rules.py  generate_secrets.py  get_metric_metadata.py  grant_superadmins.py  investigate_rules.py  jira_ads_24_28_sprintreport_current.json  lint_local.py  (+34 more)
services/: __init__.py  conftest.py
services/auth_service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/auth_service/app/: config.py  main.py
services/dlt_jira_loader/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/dlt_jira_loader/app/: __init__.py
services/dlt_jira_loader/app/clients/: jira_client.py
services/dlt_jira_loader/app/dlt_sources/: __init__.py  jira_cloud.py
services/dlt_jira_loader/app/dlt_sources/resources/: boards.py  comments.py  issues.py  projects.py  releases.py  sprints.py
services/dlt_jira_loader/app/flows/: __init__.py  _path_bootstrap.py  backfill.py  jira_sync.py  scheduled.py
services/dlt_jira_loader/app/flows/tasks/: extract.py  validation.py
services/dlt_jira_loader/app/infra/: __init__.py  db.py
services/dlt_jira_loader/app/infra/repositories/: pipeline_run.py
services/dlt_jira_loader/app/models/: __init__.py
services/dlt_jira_loader/app/models/schemas/: config.py
services/dlt_jira_loader/app/utils/: __init__.py  config.py  db.py  project_discovery.py
services/dlt_jira_loader/clients/: jira_client.py
services/dlt_jira_loader/deployments/: deploy.py
services/dlt_jira_loader/dlt_sources/: __init__.py  jira_cloud.py
services/dlt_jira_loader/dlt_sources/resources/: boards.py  comments.py  issues.py  releases.py  sprints.py
services/dlt_jira_loader/flows/: jira_sync.py  project_sync.py
services/dlt_jira_loader/flows/tasks/: checkpoint.py  extract.py  load.py  sync_window.py  validation.py
services/dlt_jira_loader/models/: config.py
services/dlt_jira_loader/scripts/: run_dlt_from_db.py
services/dlt_jira_loader/tests/: conftest.py
services/dlt_jira_loader/tests/unit/: conftest.py  test_backfill.py  test_boards_resource.py  test_client_credentials.py  test_db_utils.py  test_jira_client.py  test_jira_client_more.py  test_jira_cloud.py  test_jira_source_and_prepare.py  test_jira_sync_flow.py  test_models.py  test_models_and_db_utils.py  test_project_discovery.py  test_repositories.py  test_resources_issues_comments.py  test_resources_sprints_releases_boards.py  test_run_tracking.py  test_scheduled_wrapper.py  test_tasks_load_and_checkpoint.py  test_tasks_sync_window.py  test_validation.py
services/dlt_jira_loader/utils/: db.py
(+345 files in other folders)
