[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "process-metrics-platform"
version = "0.1.0"
description = "Self-hosted metrics collection and analytics platform"
requires-python = ">=3.11,<3.13"


[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "responses>=0.23.0",
    "pydantic>=2.12.0,<2.13.0",
    "requests>=2.32.3",
    "dlt>=1.4.0,<1.5.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "prefect>=3.4.0,<3.5.0",
]
