[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "process-metrics-platform"
version = "0.1.0"
description = "Self-hosted metrics collection and analytics platform"
requires-python = "<3.15,>=3.11"
dependencies = [
    "prefect>=3.4.24,<4.0.0",
    "dlt>=1.17.0,<2.0.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg>=0.30.0,<0.31.0",
    "fastapi>=0.111.0,<1.0.0",
    "pydantic>=2.9.0,!=2.10.0,<3.0.0",
    "requests>=2.32.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "PyYAML>=6.0,<7.0",
    "griffe>=0.45.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "responses>=0.23.0",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "bandit>=1.7.5",
    "safety>=2.0.0",
]
