[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-metrics-platform"
version = "0.1.0"
description = "Self-hosted ETL + BI platform for calculating and visualizing software development team metrics"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Orchestration
    "dagster>=1.9.0,<2.0.0",
    "dagster-webserver>=1.9.0,<2.0.0",
    "dagster-postgres>=0.25.0,<1.0.0",
    # Data ingestion
    "dlt[postgres]>=1.4.0,<2.0.0",
    # API
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    # Database
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    # Utilities
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    # Data processing
    "polars>=0.20.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",  # For Polars bridge to SQLAlchemy
    "pyarrow>=14.0.0,<16.0.0",  # Required for Polars <-> Pandas conversion
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "responses>=0.25.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    # Linting
    "ruff>=0.8.0,<1.0.0",
    "black>=24.0.0,<25.0.0",
    # Pre-commit
    "pre-commit>=4.0.0,<5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*", "common*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.dagster
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S"]
ignore = ["S101", "E501"]  # Allow assert in tests, ignore line length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov=pipelines --cov-report=term-missing --cov-fail-under=75"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app", "pipelines"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
