[project]
name = "auth_service"
version = "0.1.0"
description = "Authentication service for Process Metrics Platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.27.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = ["black>=23.12.0", "isort>=5.13.2", "ruff>=0.1.9"]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
